<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android培训</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="label_show_web">显示网页</string>
    <string name="label_show_map">显示地图</string>
    <string name="label_show_dailing_app">显示拨号程序</string>
    <string name="label_dailing">直接拨打电话</string>
    <string name="label_show_sms_app">"调用短信程序 "</string>
    <string name="label_send_sms">"发送消息 "</string>
    <string name="label_send_email">传送 Email</string>
    <string name="toast_text_1">显示在Activity中使用String资源的方法</string>
    <string name="activity_title_1">使用string资源的方式</string>

</resources>