<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:onClick="showWeb"
        android:text="@string/label_show_web" />

    <Button
        android:onClick="showMap"
        android:text="@string/label_show_map" />

    <Button
        android:onClick="showDailingApp"
        android:text="@string/label_show_dailing_app" />

    <Button
        android:onClick="dailing"
        android:text="@string/label_dailing" />

    <Button
        android:onClick="showSmsApp"
        android:text="@string/label_show_sms_app" />

    <Button
        android:onClick="sendSms"
        android:text="@string/label_send_sms" />

    <Button
        android:onClick="sendEmail"
        android:text="@string/label_send_email" />

</GridLayout>